--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: Trims
 version: 'v1'
 main: dev.auto.trims.Main
 api-version: '1.21'
-prefix: JuxePL
+prefix: TRIMS by AutoYT
 authors: [ AutoYT ]
 commands:
   debug:
