--- a/server/server.properties
+++ b/server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed Oct 29 00:33:59 EDT 2025
+#Wed Oct 29 17:45:27 EDT 2025
 accepts-transfers=false
 allow-flight=false
 broadcast-console-to-ops=true
@@ -41,7 +41,7 @@ max-tick-time=60000
 max-world-size=29999984
 motd=A Minecraft Server
 network-compression-threshold=256
-online-mode=true
+online-mode=false
 op-permission-level=4
 pause-when-empty-seconds=-1
 player-idle-timeout=0
