--- a/server/server.properties
+++ b/server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Oct 31 00:19:04 EDT 2025
+#Sat Nov 01 00:03:33 EDT 2025
 accepts-transfers=false
 allow-flight=false
 broadcast-console-to-ops=true
@@ -41,7 +41,7 @@ max-tick-time=60000
 max-world-size=29999984
 motd=A Minecraft Server
 network-compression-threshold=256
-online-mode=true
+online-mode=false
 op-permission-level=4
 pause-when-empty-seconds=-1
 player-idle-timeout=0
@@ -57,7 +57,7 @@ resource-pack-id=
 resource-pack-prompt=
 resource-pack-sha1=
 server-ip=
-server-port=25595
+server-port=25500
 simulation-distance=10
 spawn-protection=16
 status-heartbeat-interval=0
