--- a/server/config/paper-global.yml
+++ b/server/config/paper-global.yml
@@ -113,9 +113,9 @@ proxies:
     online-mode: true
   proxy-protocol: false
   velocity:
-    enabled: false
+    enabled: true
     online-mode: true
-    secret: ''
+    secret: PgFiUdbu0wCu
 scoreboards:
   save-empty-scoreboard-teams: true
   track-plugin-scoreboards: false
