--- a/server/server.properties
+++ b/server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Nov 01 23:34:58 EDT 2025
+#Sun Nov 02 14:47:58 EST 2025
 accepts-transfers=false
 allow-flight=false
 broadcast-console-to-ops=true
