--- a/server/plugins/Trims/config.yml
+++ b/server/plugins/Trims/config.yml
@@ -1,4 +1,12 @@
 trims:
+  world-options:
+    s-o:
+      min: 5
+      max: 10
+    
+    o-e:
+      min: 5
+      max: 10
   haste-handler:
     distance: 10
   teleport-handler:
