--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
-    id 'java'
+    id "java"
     id("xyz.jpenilla.run-paper") version "2.3.1"
+    // shadow removed
 }
 
-group = 'dev.auto'
-version = 'v1'
+group = "dev.auto"
+version = "v1"
 
 repositories {
     mavenCentral()
@@ -12,60 +13,56 @@ repositories {
         name = "papermc-repo"
         url = "https://repo.papermc.io/repository/maven-public/"
     }
-
-    maven { url = uri("https://repo.codemc.io/repository/maven-releases/") }
-    maven { url = uri("https://repo.codemc.io/repository/maven-snapshots/") }
     maven { url = uri("https://repo.codemc.io/repository/maven-releases/") }
     maven { url = uri("https://repo.codemc.io/repository/maven-snapshots/") }
 }
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.10-R0.1-SNAPSHOT")
+
+    // Now provided by its own plugin on the server
     compileOnly("com.github.retrooper:packetevents-spigot:2.10.0")
+
     implementation("net.kyori:adventure-text-minimessage:4.25.0")
 
+    // Optional compileOnly dep
+    compileOnly("org.popcraft:chunky-common:1.3.38")
+
+    // Lombok
     compileOnly("org.projectlombok:lombok:1.18.34")
     annotationProcessor("org.projectlombok:lombok:1.18.34")
     testCompileOnly("org.projectlombok:lombok:1.18.34")
     testAnnotationProcessor("org.projectlombok:lombok:1.18.34")
 }
 
-tasks {
-    runServer {
-        // Configure the Minecraft version for our task.
-        // This is the only required configuration besides applying the plugin.
-        // Your plugin's jar (or shadowJar if present) will be used automatically.
-        minecraftVersion("1.21")
-    }
-}
-
-def targetJavaVersion = 21
 java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+    // Use Java 21 toolchain
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
 tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8'
+    options.encoding = "UTF-8"
+    // Emit Java 21 bytecode (classfile 65)
+    options.release.set(21)
+}
 
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release.set(targetJavaVersion)
+tasks {
+    runServer {
+        // Paper MC version for run-paper
+        minecraftVersion("1.21")
     }
 }
 
 processResources {
     def props = [version: version]
     inputs.properties props
-    filteringCharset 'UTF-8'
-    filesMatching('plugin.yml') {
+    filteringCharset "UTF-8"
+    filesMatching("plugin.yml") {
         expand props
     }
 }
-
 
 // ---- Deployment helpers: copy plugin jar and start server window (Windows) ----
 
@@ -73,11 +70,11 @@ def serverDir = file("${rootDir}\\server")
 def startScriptWin = new File(serverDir, "run.bat")
 def pluginsDir = new File(serverDir, "plugins")
 
-// Copies the built plugin jar into server/plugins
-tasks.register('copyPluginJar', Copy) {
-    dependsOn tasks.named('jar')
-    from tasks.named('jar').flatMap { it.archiveFile }
-    into pluginsDir
+// Copies the normal plugin jar into server/plugins
+tasks.register("copyPluginJar", Copy) {
+    dependsOn(tasks.named("jar"))
+    from(tasks.named("jar").flatMap { it.archiveFile })
+    into(pluginsDir)
     doFirst {
         if (!pluginsDir.exists()) {
             pluginsDir.mkdirs()
@@ -85,45 +82,34 @@ tasks.register('copyPluginJar', Copy) {
     }
 }
 
-// Opens a new terminal window and runs start.bat inside the server directory (Windows)
-tasks.register('restartServer') {
-    group = 'deployment'
-    description = 'Opens a new terminal window and runs server/start.bat (Windows).'
+// Opens a new terminal window and runs run.bat inside the server directory (Windows)
+tasks.register("restartServer") {
+    group = "deployment"
+    description = "Opens a new terminal window and runs server/run.bat (Windows)."
     doLast {
         if (!serverDir.exists()) {
             throw new GradleException("Server directory not found at: ${serverDir}")
         }
-        if (System.properties['os.name'].toLowerCase().contains('win')) {
+        if (System.properties["os.name"].toLowerCase().contains("win")) {
             if (!startScriptWin.exists()) {
-                throw new GradleException("start.bat not found in ${serverDir}. Please add it, or use the runServer task instead.")
+                throw new GradleException("run.bat not found in ${serverDir}. Please add it, or use the runServer task instead.")
             }
             exec {
                 workingDir serverDir
                 // 'start' opens a new window; 'cmd /k' keeps it open after the server stops
-                commandLine 'cmd', '/c', 'start', '""', 'cmd', '/k', 'run.bat'
+                commandLine "cmd", "/c", "start", "\"\"", "cmd", "/k", "run.bat"
             }
         } else {
-            println "Non-Windows OS detected. Skipping Windows start.bat. Consider using the runServer task."
+            println "Non-Windows OS detected. Skipping Windows run.bat. Consider using the runServer task."
         }
     }
 }
 
-// Convenience task: build -> copy jar -> open server window
-tasks.register('deployPlugin') {
-    group = 'deployment'
-    description = 'Builds the plugin, copies it to server/plugins, and opens a terminal window to start the server.'
-    dependsOn 'build', 'copyPluginJar'
-    finalizedBy 'restartServer'
+// jar -> copyPluginJar -> restartServer
+tasks.named("copyPluginJar") {
+    finalizedBy("restartServer")
 }
 
-
-// Auto-deploy hook: after every build, copy the jar and open a server window
-// Note: This will start a new server window on every successful build.
-// If you want manual control instead, run: gradlew deployPlugin
-tasks.named('build') {
-    finalizedBy 'copyPluginJar'
-}
-
-tasks.named('copyPluginJar') {
-    finalizedBy 'restartServer'
+tasks.named("jar") {
+    finalizedBy("copyPluginJar")
 }
