--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,10 +9,6 @@ trims:
       min: 5
       max: 10
 
-    spawn-variation:
-      min: 5
-      max: 10
-
     duration:
       meltdown: 27000
 
@@ -23,9 +19,92 @@ trims:
       start-after-empty-ticks: 6000
       max-generated-worlds: 15
 
+  structure-options:
+    0:
+      name: Desert Temple
+      min: 500
+      max: 1000
+      follow-distance: 60
+      world-border: true
+      wd-buffer: 10
+      time-to-meltdown: 27000
+    1:
+      name: Jungle Temple
+      min: 10
+      max: 20
+      follow-distance: 60
+      world-border: true
+      wd-buffer: 10
+      time-to-meltdown: 27000
+    2:
+      name: Ancient City
+      min: 10
+      max: 20
+      follow-distance: 60
+      world-border: true
+      wd-buffer: 10
+      time-to-meltdown: 27000
+    3:
+      name: Trial Chamber
+      min: 10
+      max: 20
+      follow-distance: 60
+      world-border: true
+      wd-buffer: 10
+      time-to-meltdown: 27000
+    4:
+      name: Trail Ruins
+      min: 10
+      max: 20
+      follow-distance: 60
+      world-border: true
+      wd-buffer: 10
+      time-to-meltdown: 27000
+    5:
+      name: Stronghold
+      min: 10
+      max: 20
+      follow-distance: 60
+      world-border: true
+      wd-buffer: 10
+      time-to-meltdown: 27000
+    6:
+      name: Mansion
+      min: 10
+      max: 20
+      follow-distance: 60
+      world-border: true
+      wd-buffer: 10
+      time-to-meltdown: 27000
+    7:
+      name: Monument
+      min: 10
+      max: 20
+      follow-distance: 60
+      world-border: true
+      wd-buffer: 10
+      time-to-meltdown: 27000
+    8:
+      name: Pillager Outpost
+      min: 10
+      max: 20
+      follow-distance: 60
+      world-border: true
+      wd-buffer: 10
+      time-to-meltdown: 27000
+    9:
+      name: Shipwreck
+      min: 10
+      max: 20
+      follow-distance: 60
+      world-border: true
+      wd-buffer: 10
+      time-to-meltdown: 27000
+
   player-options:
     # Ticks | 24hrs currently
     rift-cooldown: 1728000
+    spawn-variation: 10
 
   teleport-handler:
     # In seconds
