Most features added

--- a/server/plugins/trims/data/generated-worlds.yml
+++ b/server/plugins/trims/data/generated-worlds.yml
@@ -1,6 +1,1 @@
-generated-worlds:
-- 96c374be-cae9-4f5c-8f45-31f61dca6e9a
-- 2e772520-3050-4c1b-a162-aa676e158bd4
-- 78615d63-a5d6-44de-b2ef-ee73602c0415
-- 2364b6ac-99f2-4b0d-8766-1ae8081c1f18
-- cc64fc73-02a0-4dfb-91bb-eab5457f45f6
+generated-worlds: []
