--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,9 @@ repositories {
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.10-R0.1-SNAPSHOT")
-
-    // Now provided by its own plugin on the server
     compileOnly("com.github.retrooper:packetevents-spigot:2.10.0")
 
-    implementation("net.kyori:adventure-text-minimessage:4.25.0")
+    compileOnly("net.kyori:adventure-text-minimessage:4.25.0")
 
     // Optional compileOnly dep
     compileOnly("org.popcraft:chunky-common:1.3.38")
@@ -33,6 +31,9 @@ dependencies {
     annotationProcessor("org.projectlombok:lombok:1.18.34")
     testCompileOnly("org.projectlombok:lombok:1.18.34")
     testAnnotationProcessor("org.projectlombok:lombok:1.18.34")
+
+    // Database
+    implementation("com.h2database:h2:2.3.232")
 }
 
 java {
