--- a/server/plugins/trims/config.yml
+++ b/server/plugins/trims/config.yml
@@ -13,23 +13,25 @@ trims:
       meltdown: 27000
     
     generation:
-      cpt: 1
+      cpt: 3
       buffer-chunks: 1
       start-intial-generation-ticks: 200
       start-after-empty-ticks: 60
-      max-generated-worlds: 2
+      max-generated-worlds: 3
   
   structure-options:
     '0':
+      chance: 10
       follow-penalty-multiplier: 0.5
       name: Desert Temple
-      min: 150
-      max: 200
-      follow-distance: 60
+      min: 100
+      max: 120
+      follow-distance: 50
       world-border: true
       wd-buffer: 10
-      time-to-meltdown: 6000
+      time-to-meltdown: 36000
     '1':
+      chance: 10
       follow-penalty-multiplier: 0.5
       name: Jungle Temple
       min: 10
@@ -39,6 +41,7 @@ trims:
       wd-buffer: 10
       time-to-meltdown: 500
     '2':
+      chance: 10
       follow-penalty-multiplier: 0.5
       name: Ancient City
       min: 10
@@ -48,6 +51,7 @@ trims:
       wd-buffer: 10
       time-to-meltdown: 27000
     '3':
+      chance: 10
       follow-penalty-multiplier: 0.5
       name: Trial Chamber
       min: 10
@@ -57,6 +61,7 @@ trims:
       wd-buffer: 10
       time-to-meltdown: 27000
     '4':
+      chance: 10
       follow-penalty-multiplier: 0.5
       name: Trail Ruins
       min: 10
@@ -66,6 +71,7 @@ trims:
       wd-buffer: 10
       time-to-meltdown: 27000
     '5':
+      chance: 10
       follow-penalty-multiplier: 0.5
       name: Stronghold
       min: 10
@@ -75,6 +81,7 @@ trims:
       wd-buffer: 10
       time-to-meltdown: 27000
     '6':
+      chance: 10
       follow-penalty-multiplier: 0.5
       name: Mansion
       min: 10
@@ -84,6 +91,7 @@ trims:
       wd-buffer: 10
       time-to-meltdown: 27000
     '7':
+      chance: 10
       follow-penalty-multiplier: 0.5
       name: Monument
       min: 10
@@ -93,6 +101,7 @@ trims:
       wd-buffer: 10
       time-to-meltdown: 27000
     '8':
+      chance: 10
       follow-penalty-multiplier: 0.5
       name: Pillager Outpost
       min: 10
@@ -102,6 +111,7 @@ trims:
       wd-buffer: 10
       time-to-meltdown: 27000
     '9':
+      chance: 10
       follow-penalty-multiplier: 0.5
       name: Shipwreck
       min: 10
@@ -112,6 +122,7 @@ trims:
       time-to-meltdown: 27000
   
   player-options:
+    per-material-structure-selection: false
     # Ticks | 24hrs currently
     rift-cooldown: 400
     spawn-variation: 10
